Fixed h2 headers wrapping and looking aweful on mobile devices

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -262,6 +262,7 @@ h2 {
   border-bottom: 1px solid #EEE;
   padding-bottom: 0.3em;
   font-size: 2em;
+  line-height: 110%;
   margin-bottom:0.3em;
 }
 h3 {
